fixed spacing with my picture

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,6 +5,8 @@
     background-color: grey;
     height: 350px;
     width: 350px;
+    position: relative;
+    right: 15px;
 }
 
 .game {
@@ -45,7 +47,7 @@
 }
 
 
-@media screen and (max-width: 389px) {
+@media screen and (max-width: 576px) {
     h3 {
         margin-left: auto;
         margin-right: auto;
@@ -71,5 +73,12 @@
         width: 120px;
         margin: 13px;
     }
+    #goodboy {
+        height: 250px;
+        width: 250px;
+    }
+
 }
+
+
 
